kubernetes/4_element/1_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: element
  namespace: element
spec:
  selector:
    matchLabels:
      app: element
  replicas: 3
  template:
    metadata:
      labels:
        app: element
    spec:
      containers:
      - name: element
        image: vectorim/element-web:latest
        volumeMounts:
        - name: config-volume
          mountPath: /app/config.json
          subPath: config.json
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
            httpGet:
                path: /
                port: http
            initialDelaySeconds: 2
            periodSeconds: 3
        livenessProbe:
            httpGet:
                path: /
                port: http
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
      - name: config-volume
        configMap:
          name: element-config
