kubernetes/4_element/2_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: element
  namespace: element
spec:
  selector:
    app: element
  ports:
    - name: http
      port: 80
      targetPort: 80
