kubernetes/4_element/3_ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: element
  namespace: element
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.app.parrhesia.dev`)
      kind: Rule
      services:
        - name: element
          port: 80
    - match: Host(`app.parrhesia.dev`)
      kind: Rule
      services:
        - name: element
          port: 80
  tls:
    secretName: parrhesia-dev-tls
